# cvworks

./: .gitignore  Makefile  Makefile.win  README-en.md  README.md  _version.py  app.py  cvworks.spec  icon.icns  make-win.bat  pyproject.toml  requirements-win.txt  requirements.txt  settings.py  version.py  win_requirements.txt
buildscripts/: buildversion.py  create_shortcut.py  create_windows_shortcut.py  update-pyproject-toml-version.py
cvworks_gui/: __init__.py  styling.py  view.py
cvworks_gui/ui/: __init__.py  calendar_ui.py  calendar_ui.ui  customcalendar.py
schedule/: schedule.py
